corpus/cpp/lambda_closure/case-01/snapshots/gcc15_plus/dual_sink_structured/render.verbose.txt
error: lambda capture error
--> src/main.cpp:3:33
help: add the variable to the capture list or specify a default capture mode [=] or [&]
why: 'value' is not captured
| src/main.cpp:3:33
|     auto lambda = []() { return value; };
|                                 ^
note: the lambda has no capture-default
note: 'int value' declared here
debug: rule_id=rule.family.lambda_closure.message_terms
debug: matched_conditions=message_contains=is not captured, phase=semantic
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output